--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header nav ul li a:active {
 }
 
 header #casm-logo{
-    width: 16%;
+    width: 60px;
     float: right;
     margin-right: 5px;
 }
