--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ body {
     list-style: none;
     text-align: center;
     display: flex;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .card {
