--- a/style.css
+++ b/style.css
@@ -160,10 +160,10 @@ body {
 }
 
 .services .service .service-description {
-    font-size: 14px;
-    height: auto;
-    min-height: 0;
-    transition: all 200ms;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease, opacity 0.3s ease;
+    opacity: 0;
 }
 
 .services .service ul {
@@ -186,7 +186,9 @@ body {
 .services .service.clicked .service-description {
     font-size: 16px;
     min-height: 10px;
-    height: auto; 
+    height: auto;
+    max-height: 600px; /* Adjust based on content */
+    opacity: 1;
 }
 
 .services .service.clicked .service-description span {
@@ -351,9 +353,27 @@ footer .links ul a {
         flex-basis: 48%;
     }
 
+    .services .service .service-description {
+        font-size: 14px;
+        height: auto;
+        opacity: 1;
+        max-height: 90px;
+    }
+
+    .services .service .service-description  ul { 
+        opacity: 0;
+        max-height: 0;
+        transition: all 200ms;
+    }
+
     .services .service.clicked li img {
         width: 24px;
         margin-right: 5px;
+    }
+
+    .services .service.service.clicked .service-description  ul { 
+        opacity: 1;
+        max-height: 100px;
     }
 
     .hero h1 {
